--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -26,23 +26,23 @@
     </view>
 
     <view class="selectProject flex">
-     <label style="width:26rpx;height:2rpx;background:#333;margin-right:8rpx"></label>
-     微天使FA精选项目
-     <label style="width:26rpx;height:2rpx;background:#333;margin-left:8rpx;"></label>
-     </view>
+      <label style="width:26rpx;height:2rpx;background:#333;margin-right:8rpx"></label>
+      微天使FA精选项目
+      <label style="width:26rpx;height:2rpx;background:#333;margin-left:8rpx;"></label>
+    </view>
 
     <block wx:for="{{slectProject}}" wx:key="{{index}}">
       <view class="selectProjectBox" data-project="{{item.project_id}}" hover-class='t-hoverColor' catchtap="projectDetail">
         <view class="describle" wx:if="{{item.pro_intro != ''}}">
-        <image src='/img/icon-jingxuan@2x.png' class="selectPic" wx:if="{{item.is_selected == 3}}"></image>
-        {{item.pro_intro}}</view>
+          <image src='/img/icon-jingxuan@2x.png' class="selectPic" wx:if="{{item.is_selected == 3}}"></image>
+          {{item.pro_intro}}</view>
         <image src="/img/img-dujia@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
         <view class='flex industryBox' wx:if="{{item.pro_industry.length != 0}}">
           <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
             <view class="allIndustry">{{industry.industry_name}}</view>
           </block>
         </view>
-        <view class='flex otherInfo'  wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
+        <view class='flex otherInfo' wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
           <view class="allProjectDetail flex">
             <view class="projectDetailLine" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}} </view>
             <view class="projectDetailLine" wx:if="{{item.pro_finance_stock_after != ''}}">· {{item.pro_finance_stock_after}}% </view>
@@ -78,14 +78,15 @@
     </block>
   </scroll-view>
 </view>
+
 <view class="floatBtn">
   <view class="t-accreditation flex">
     <view>创建项目，加速融资</view>
     <view class="t-btnToAccreditation" hover-class='t-hoverColor' bindtap="toCreateProject">马上创建</view>
   </view>
 </view>
-
-
+<template is="theBottom" wx:if="{{atBottom == true}}"></template>
+<view class='whiteSpace'></view>
 <template name="jumpBlock">
   <view class="jumpTo" bindtap='{{tapName}}' hover-class='t-hoverColor'>
     <image class='jumpImage' src='{{src}}'></image>
