--- a/Weitianshi/pages/my/myNew/myNew.wxss
+++ b/Weitianshi/pages/my/myNew/myNew.wxss
@@ -47,10 +47,16 @@ page {
 
 .user_left .user_identifyContent {
   position: absolute;
-  left: 14rpx;
-  top: 128rpx;
+  left: 18rpx;
+  top: 132rpx;
   width: 124rpx;
   height: 34rpx;
+}
+
+.user_left .user_pic {
+  width: 152rpx;
+  height: 152rpx;
+  border-radius: 50%;
 }
 
 .Identification {
@@ -86,12 +92,6 @@ page {
   height: 100%;
 }
 
-.user_left image {
-  width: 152rpx;
-  height: 152rpx;
-  border-radius: 50%;
-}
-
 .user_right {
   margin-top: 24rpx;
 }
@@ -123,6 +123,7 @@ page {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  margin-top: 8rpx;
 }
 
 .user_popularity, .user_attention, .user_potential {
@@ -207,7 +208,7 @@ page {
   width: 32rpx;
   height: 32rpx;
   margin-right: 32rpx;
-  margin-top: 40rpx;
+  margin-top: 42rpx;
 }
 
 .blockTitle {
@@ -442,7 +443,7 @@ page {
 .aline {
   margin: 0 32rpx;
   width: 90%;
-  height: 2rpx;
+  height: 1rpx;
   background: #e6e6e6;
 }
 
@@ -485,6 +486,7 @@ page {
   color: #666;
   text-align: left;
   margin-top: 16rpx;
+  margin-left: -12rpx;
 }
 
 /*未登录  */
@@ -508,6 +510,7 @@ page {
   color: #999;
   text-align: left;
 }
-.flexCenter{
-   justify-content:center;
+
+.flexCenter {
+  justify-content: center;
 }
