--- a/Weitianshi/pages/search/search3/search3.wxml
+++ b/Weitianshi/pages/search/search3/search3.wxml
@@ -16,7 +16,7 @@
   <block wx:for="{{investorList}}" wx:key="{{investorList}}" wx:if='{{investorList}}'>
     <view class='investorCard'>
       <view class="t-investorColor" hover-class='t-hoverColor'>
-        <template is='InvestorCard' data='{{item}}'></template>
+        <template is='InvestorCard' data='{{item,user_id}}'></template>
         <view class='t-alineHeight'></view>
         <template is='cardBottom1' data='{{item,user_id}}'></template>
       </view>
@@ -27,7 +27,7 @@
   <block wx:for="{{faList}}" wx:key="{{faList}}" wx:if='{{faList}}'>
     <view class='investorCard'>
       <view class="t-investorColor" hover-class='t-hoverColor'>
-        <template is='InvestorCard' data='{{item}}'></template>
+        <template is='InvestorCard' data='{{item,user_id}}'></template>
         <view class='t-alineHeight'></view>
         <template is='cardBottom1' data='{{item,user_id}}'></template>
       </view>
@@ -37,7 +37,7 @@
   <block wx:for="{{myList}}" wx:key="{{item.user_id}}" wx:if='{{myList}}'>
     <view class='investorCard'>
      <view class="t-investorColor" hover-class='t-hoverColor'>
-      <template is='InvestorCard' data='{{item}}'></template>
+      <template is='InvestorCard' data='{{item,user_id}}'></template>
        <view class='t-alineHeight'></view>
       <template is='cardBottom1' data='{{item,user_id}}'></template>
       </view>
