--- a/Weitianshi/pages/userDetail/networkDetail/networkDetail.wxml
+++ b/Weitianshi/pages/userDetail/networkDetail/networkDetail.wxml
@@ -153,8 +153,9 @@
   <!--错误提示  -->
   <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
   <!-- 客服 -->
-  <button open-type="contact" class="t-contact">
-    <image class="service" src="/img/btn-lianxikefu@2x.png">
+  <button open-type="contact" class="t-contact" bindtap='contactTap'>
+    <image class="service" wx:if="{{bindContact==false}}" src="/img/btn-lianxikefu@2x.png"></image>
+    <image class="service" wx:if="{{bindContact==true}}" src="/img/img-kefu-s@2x.png">
     </image>
   </button>
 </view>
