--- a/Weitianshi/pages/my/my/my.wxss
+++ b/Weitianshi/pages/my/my/my.wxss
@@ -1047,3 +1047,9 @@ page {
 .no-border {
   border-left: none;
 }
+.successProjcet {
+  margin-bottom: 52rpx;
+}
+#investProject .successProjcet:last-child{
+  margin-bottom: 0;
+}
