--- a/Weitianshi/pages/search/search2/search2.wxml
+++ b/Weitianshi/pages/search/search2/search2.wxml
@@ -105,10 +105,10 @@
           <image src="{{item.investor_logo_url}}" class="t-userPic" wx:if="{{item.investor_logo_url}}"></image>
           <view class="t-userName">{{item.investor_name}}</view>
           <view class="t-userPart flex" wx:if="{{item.authentication[0].group_title}}">
-            <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='投资方'}}" src="/img/img-touziren@2x.png"></image>
+            <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='投资人'}}" src="/img/img-touziren@2x.png"></image>
             <image class="t-renzheng" wx:if="{{item.authentication[0].group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
           </view>
-          <view class="t-user_text" wx:if="{{item.investor_logo_text}}">{{item.investor_logo_text}}</view>
+          <view class="t-user_text" wx:if="{{item.investor_logo_text}}">{{item.investor_logo_text}}</view> 
         </view>
         <view class="t-careerCompany flex">
           <view class="t-userPosition">{{item.investor_career}}</view>
