--- a/Weitianshi/pages/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/projectDetail/projectDetail.wxss
@@ -8,28 +8,34 @@ page {
 scroll-view {
   height: 100%;
 }
+
 .theBottomBox {
   justify-content: center;
   margin-top: 32rpx;
   margin-bottom: 127rpx;
 }
-.investGroupBlock{
-  border-bottom: 0!important;
+
+.investGroupBlock {
+  border-bottom: 0 !important;
   /* padding-bottom: 0; */
 }
 
 /*我的项目卡片*/
-.t-userName{
+
+.t-userName {
   font-weight: bold;
 }
+
 /* .on {
   color: #ccc;
   border-bottom: 5rpx solid #333;
   text-align: center;
 } */
-.media123{
+
+.media123 {
   background: #f2f3f4;
 }
+
 .more {
   color: #009eff;
   font-size: 12px;
@@ -405,8 +411,9 @@ scroll-view {
   font-size: 32rpx;
   color: #333;
   line-height: 48rpx;
-  text-align: left!important;
+  text-align: left !important;
   font-weight: bold;
+  margin-bottom:20rpx; 
 }
 
 .industry {
@@ -415,7 +422,7 @@ scroll-view {
   color: #666;
   line-height: 26rpx;
   text-align: left;
-  margin: 0rpx 10rpx 0rpx 0;
+  margin: 0rpx 16rpx 20rpx 0;
 }
 
 .allProjectDetail {
@@ -423,8 +430,8 @@ scroll-view {
   color: #666;
   line-height: 26rpx;
   text-align: left;
-  margin-bottom: 34rpx;
-  margin-top: 24rpx;
+  margin-bottom: 32rpx;
+  /* margin-top: 14rpx; */
 }
 
 .ProjectCluesLine {
@@ -470,9 +477,9 @@ scroll-view {
 
 .userName {
   font-size: 28rpx;
-  color: #3a3e4a;
+  color: #333;
   letter-spacing: 0;
-  line-height: 28rpx;
+  line-height: 34rpx;
   text-align: left;
   margin-right: 16rpx;
   text-overflow: ellipsis;
@@ -485,11 +492,12 @@ scroll-view {
   width: 12rpx;
   height: 20rpx;
 }
- 
+
 .userInfo {
   width: 460rpx;
   align-items: center;
   margin-top: 6rpx;
+  line-height: 34rpx;
 }
 
 /*项目亮点*/
@@ -632,8 +640,7 @@ button::after {
 }
 
 .projectDetailLine {
-  /* padding: 0 16rpx; */
-  /* border-right: 1rpx solid #999; */
+  /* padding: 0 16rpx; *//* border-right: 1rpx solid #999; */
 }
 
 .projectDetailLine:first-child {
@@ -911,7 +918,7 @@ button::after {
 
 .materialWeb {
   font-size: 26rpx;
-  color: #666;
+  color: #333;
   letter-spacing: 0;
   line-height: 26rpx;
   text-align: left;
@@ -1102,7 +1109,7 @@ button::after {
 }
 
 #projectBox .teamPro {
-  margin-bottom: 40rpx;
+  margin-bottom: 22rpx;
 }
 
 /*空白页*/
@@ -1233,8 +1240,7 @@ button::after {
 }
 
 .projectDetailLine {
-  /* padding: 0 16rpx; */
-  /* border-right: 1rpx solid #999; */
+  /* padding: 0 16rpx; *//* border-right: 1rpx solid #999; */
 }
 
 .projectDetailLine:first-child {
@@ -1288,7 +1294,7 @@ button::after {
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 666
+  z-index: 666;
 }
 
 .contactModalBox {
@@ -1406,6 +1412,6 @@ button::after {
 .aline {
   /* margin: 0 32rpx; */
   width: 100%;
-  height: 2rpx;
-  background: #e6e6e6;
+  height: 1rpx;
+  background: #f0f0f0;
 }
