--- a/Weitianshi/pages/search/search2/search2.wxss
+++ b/Weitianshi/pages/search/search2/search2.wxss
@@ -53,7 +53,7 @@
 }
 
 .on {
-  border-bottom: 4rpx solid #3378e0;
+  /* border-bottom: 4rpx solid #3378e0; */
   border-radius: 4rpx;
 }
 
@@ -285,4 +285,17 @@
   font-weight: bold;
   padding-left: 32rpx;
 
+}
+.on::after {
+  content: '';
+  /* color: #40587a; */
+  width: 40rpx;
+  height: 4rpx;
+  border-radius: 4rpx;
+  text-align: center;
+  z-index: 666;
+  display: block!important;
+  background: #3378e0;
+  margin-left: 38%;
+  /* border-bottom: 4rpx solid #3378e0; */
 }
