--- a/Weitianshi/pages/userDetail/networkDetail/networkDetail.wxml
+++ b/Weitianshi/pages/userDetail/networkDetail/networkDetail.wxml
@@ -82,7 +82,7 @@
         二维码</view>
     </view>
     <view class="t-line"></view>
-    <view class="t-flexBox" bindtap="maintainProject" hover-class="t-hoverColor">
+    <view class="t-flexBox" hover-class="t-hoverColor">
       <image src='/img/icon-fenxiang@2x.png' class='t-shopPic'></image>
       <button open-type='share' class='t-shopBlock'>分享</button>
     </view>
