--- a/Weitianshi/app.wxss
+++ b/Weitianshi/app.wxss
@@ -1299,7 +1299,7 @@ textarea {
   height: 80rpx;
   border-radius: 100%;
   margin: 0;
-  margin-right: 24rpx;
+  margin-right: 16rpx;
 }
 
 .t-bindSuccess {
@@ -1500,8 +1500,9 @@ textarea {
   height: 64rpx;
   margin-left: 32rpx;
   margin-top: 16rpx;
-  line-height: 72rpx;
+  line-height: 64rpx;
   padding-left: 64rpx;
+  font-size: 24rpx;
 }
 
 #newSearch2 .screen {
