--- a/Weitianshi/pages/myProject/publishedProject/publishedProject.wxss
+++ b/Weitianshi/pages/myProject/publishedProject/publishedProject.wxss
@@ -151,7 +151,7 @@ picker .checkOn {
 .projectBoxContent {
   justify-content: space-between;
   margin: 0 32rpx;
-  border-bottom: 1rpx solid #e6e6e6;
+  /* border-bottom: 1rpx solid #e6e6e6; */
   height: auto;
 }
 
@@ -399,18 +399,18 @@ input:after {
 
 .pro_goodness {
   background: #fff;
-  width: 376px;
-  height: 206px;
+  height: 228rpx; 
 }
 
 .selectInput {
   background: #f5f5f5;
   border-radius: 4rpx;
-  width: 622rpx;
-  height: 216rpx;
+  width: 666rpx;
+  height: 96rpx;
   font-size: 28rpx;
-  margin: 0 34rpx 32rpx 34rpx;
-  padding: 24rpx;
+  padding-left: 20rpx;
+  margin:  0 32rpx 32rpx 32rpx;
+  line-height: 96rpx;
 }
 
 .goodness {
