--- a/Weitianshi/pages/myProject/pushToSuccess/pushToSuccess.wxml
+++ b/Weitianshi/pages/myProject/pushToSuccess/pushToSuccess.wxml
@@ -1,2 +1,2 @@
 <import src="/pages/Template/Template.wxml" />
-<template is="jumpToWhere" data="{{text:'推送成功',imgUrls:imgUrls,type:1,text2:'确定',disabled,btnName:btnYes}}"></template>
+<template is="jumpToWhere" data="{{text:'已发送给对方',content:'若投资人感兴趣，微天使会联系您',imgUrls:imgUrls,type:1,text2:'确定',disabled,btnName:btnYes}}"></template>
