--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -95,3 +95,4 @@
     <view class='jumpToContent'>{{text}}</view>
   </view>
 </template>
+<template is="network" wx:if="{{that.data.inConnected==true}}"></template>
